languages/minilogo/LanguageParser.py
# Generated from languages/minilogo/Language.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'halt'", "'move'", "'color'", 
                     "'pen'", "'up'", "'down'", "'def'", "'='", "'for'", 
                     "'to'", "<INVALID>", "<INVALID>", "<INVALID>", "'('", 
                     "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "NUMBER", "OPERATOR", "LPAREN", "RPAREN", "LCBRACKET", 
                      "RCBRACKET", "HEX", "COLOR", "WS", "COMMENT" ]

    RULE_variable = 0
    RULE_literal = 1
    RULE_expression = 2
    RULE_arguments = 3
    RULE_halt = 4
    RULE_move = 5
    RULE_color = 6
    RULE_pen = 7
    RULE_call = 8
    RULE_def = 9
    RULE_parameters = 10
    RULE_body = 11
    RULE_assignment = 12
    RULE_forloop = 13
    RULE_main = 14

    ruleNames =  [ "variable", "literal", "expression", "arguments", "halt", 
                   "move", "color", "pen", "call", "def", "parameters", 
                   "body", "assignment", "forloop", "main" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    ID=12
    NUMBER=13
    OPERATOR=14
    LPAREN=15
    RPAREN=16
    LCBRACKET=17
    RCBRACKET=18
    HEX=19
    COLOR=20
    WS=21
    COMMENT=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variableName = None # Token

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = LanguageParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            localctx.variableName = self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(LanguageParser.NUMBER, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = LanguageParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(LanguageParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.leftOperand = None # ExpressionContext
            self.op = None # Token
            self.rightOperand = None # ExpressionContext

        def variable(self):
            return self.getTypedRuleContext(LanguageParser.VariableContext,0)


        def literal(self):
            return self.getTypedRuleContext(LanguageParser.LiteralContext,0)


        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def OPERATOR(self):
            return self.getToken(LanguageParser.OPERATOR, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LanguageParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.state = 35
                self.variable()
                pass
            elif token in [13]:
                self.state = 36
                self.literal()
                pass
            elif token in [15]:
                self.state = 37
                self.match(LanguageParser.LPAREN)
                self.state = 38
                self.expression(0)
                self.state = 39
                self.match(LanguageParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LanguageParser.ExpressionContext(self, _parentctx, _parentState)
                    localctx.leftOperand = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 43
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 44
                    localctx.op = self.match(LanguageParser.OPERATOR)
                    self.state = 45
                    localctx.rightOperand = self.expression(5) 
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExpressionContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_arguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = LanguageParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.expression(0)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 52
                self.match(LanguageParser.T__0)
                self.state = 53
                self.expression(0)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HaltContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_halt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHalt" ):
                return visitor.visitHalt(self)
            else:
                return visitor.visitChildren(self)




    def halt(self):

        localctx = LanguageParser.HaltContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_halt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(LanguageParser.T__1)
            self.state = 60
            self.match(LanguageParser.LPAREN)
            self.state = 61
            self.match(LanguageParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # ExpressionContext
            self.y = None # ExpressionContext

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExpressionContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_move

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMove" ):
                return visitor.visitMove(self)
            else:
                return visitor.visitChildren(self)




    def move(self):

        localctx = LanguageParser.MoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_move)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(LanguageParser.T__2)
            self.state = 64
            self.match(LanguageParser.LPAREN)
            self.state = 65
            localctx.x = self.expression(0)
            self.state = 66
            self.match(LanguageParser.T__0)
            self.state = 67
            localctx.y = self.expression(0)
            self.state = 68
            self.match(LanguageParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.code = None # Token

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def COLOR(self):
            return self.getToken(LanguageParser.COLOR, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_color

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColor" ):
                return visitor.visitColor(self)
            else:
                return visitor.visitChildren(self)




    def color(self):

        localctx = LanguageParser.ColorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_color)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LanguageParser.T__3)
            self.state = 71
            self.match(LanguageParser.LPAREN)
            self.state = 72
            localctx.code = self.match(LanguageParser.COLOR)
            self.state = 73
            self.match(LanguageParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.status = None # Token

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_pen

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPen" ):
                return visitor.visitPen(self)
            else:
                return visitor.visitChildren(self)




    def pen(self):

        localctx = LanguageParser.PenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pen)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(LanguageParser.T__4)
            self.state = 76
            self.match(LanguageParser.LPAREN)
            self.state = 77
            localctx.status = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                localctx.status = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 78
            self.match(LanguageParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.functionName = None # Token
            self.args = None # ArgumentsContext

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def arguments(self):
            return self.getTypedRuleContext(LanguageParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = LanguageParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.functionName = self.match(LanguageParser.ID)
            self.state = 81
            self.match(LanguageParser.LPAREN)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 45056) != 0):
                self.state = 82
                localctx.args = self.arguments()


            self.state = 85
            self.match(LanguageParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.functionName = None # Token
            self.params = None # ParametersContext

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def body(self):
            return self.getTypedRuleContext(LanguageParser.BodyContext,0)


        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(LanguageParser.ParametersContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef" ):
                return visitor.visitDef(self)
            else:
                return visitor.visitChildren(self)




    def def_(self):

        localctx = LanguageParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(LanguageParser.T__7)
            self.state = 88
            localctx.functionName = self.match(LanguageParser.ID)
            self.state = 89
            self.match(LanguageParser.LPAREN)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 90
                localctx.params = self.parameters()


            self.state = 93
            self.match(LanguageParser.RPAREN)
            self.state = 94
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variableName = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.ID)
            else:
                return self.getToken(LanguageParser.ID, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = LanguageParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            localctx.variableName = self.match(LanguageParser.ID)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 97
                self.match(LanguageParser.T__0)
                self.state = 98
                localctx.variableName = self.match(LanguageParser.ID)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCBRACKET(self):
            return self.getToken(LanguageParser.LCBRACKET, 0)

        def RCBRACKET(self):
            return self.getToken(LanguageParser.RCBRACKET, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(LanguageParser.AssignmentContext,i)


        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.CallContext)
            else:
                return self.getTypedRuleContext(LanguageParser.CallContext,i)


        def move(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.MoveContext)
            else:
                return self.getTypedRuleContext(LanguageParser.MoveContext,i)


        def color(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ColorContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ColorContext,i)


        def pen(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.PenContext)
            else:
                return self.getTypedRuleContext(LanguageParser.PenContext,i)


        def halt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.HaltContext)
            else:
                return self.getTypedRuleContext(LanguageParser.HaltContext,i)


        def forloop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ForloopContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ForloopContext,i)


        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COMMENT)
            else:
                return self.getToken(LanguageParser.COMMENT, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = LanguageParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(LanguageParser.LCBRACKET)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4199484) != 0):
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 105
                    self.assignment()
                    pass

                elif la_ == 2:
                    self.state = 106
                    self.call()
                    pass

                elif la_ == 3:
                    self.state = 107
                    self.move()
                    pass

                elif la_ == 4:
                    self.state = 108
                    self.color()
                    pass

                elif la_ == 5:
                    self.state = 109
                    self.pen()
                    pass

                elif la_ == 6:
                    self.state = 110
                    self.halt()
                    pass

                elif la_ == 7:
                    self.state = 111
                    self.forloop()
                    pass

                elif la_ == 8:
                    self.state = 112
                    self.match(LanguageParser.COMMENT)
                    pass


                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(LanguageParser.RCBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variableName = None # Token
            self.value = None # ExpressionContext

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(LanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = LanguageParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            localctx.variableName = self.match(LanguageParser.ID)
            self.state = 121
            self.match(LanguageParser.T__8)
            self.state = 122
            localctx.value = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForloopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.end = None # ExpressionContext

        def assignment(self):
            return self.getTypedRuleContext(LanguageParser.AssignmentContext,0)


        def body(self):
            return self.getTypedRuleContext(LanguageParser.BodyContext,0)


        def expression(self):
            return self.getTypedRuleContext(LanguageParser.ExpressionContext,0)


        def variable(self):
            return self.getTypedRuleContext(LanguageParser.VariableContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_forloop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForloop" ):
                return visitor.visitForloop(self)
            else:
                return visitor.visitChildren(self)




    def forloop(self):

        localctx = LanguageParser.ForloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_forloop)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(LanguageParser.T__9)
                self.state = 125
                self.assignment()
                self.state = 126
                self.match(LanguageParser.T__10)
                self.state = 127
                localctx.end = self.expression(0)
                self.state = 128
                self.body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(LanguageParser.T__9)
                self.state = 131
                self.variable()
                self.state = 132
                self.match(LanguageParser.T__10)
                self.state = 133
                localctx.end = self.expression(0)
                self.state = 134
                self.body()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(LanguageParser.AssignmentContext,i)


        def def_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.DefContext)
            else:
                return self.getTypedRuleContext(LanguageParser.DefContext,i)


        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.CallContext)
            else:
                return self.getTypedRuleContext(LanguageParser.CallContext,i)


        def move(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.MoveContext)
            else:
                return self.getTypedRuleContext(LanguageParser.MoveContext,i)


        def color(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ColorContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ColorContext,i)


        def pen(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.PenContext)
            else:
                return self.getTypedRuleContext(LanguageParser.PenContext,i)


        def halt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.HaltContext)
            else:
                return self.getTypedRuleContext(LanguageParser.HaltContext,i)


        def forloop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ForloopContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ForloopContext,i)


        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COMMENT)
            else:
                return self.getToken(LanguageParser.COMMENT, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_main

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = LanguageParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4199740) != 0):
                self.state = 147
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 138
                    self.assignment()
                    pass

                elif la_ == 2:
                    self.state = 139
                    self.def_()
                    pass

                elif la_ == 3:
                    self.state = 140
                    self.call()
                    pass

                elif la_ == 4:
                    self.state = 141
                    self.move()
                    pass

                elif la_ == 5:
                    self.state = 142
                    self.color()
                    pass

                elif la_ == 6:
                    self.state = 143
                    self.pen()
                    pass

                elif la_ == 7:
                    self.state = 144
                    self.halt()
                    pass

                elif la_ == 8:
                    self.state = 145
                    self.forloop()
                    pass

                elif la_ == 9:
                    self.state = 146
                    self.match(LanguageParser.COMMENT)
                    pass


                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         




